almost done with numParams st-side

--- a/client/pageBodyStuff/list.html
+++ b/client/pageBodyStuff/list.html
@@ -3,12 +3,15 @@
 	{{#let body_id=bodyid}}<br>
 <!-- 			{{body_id}} -->
 		{{#each choicePages body_id}}
-			<a href="/cyoas/{{cyoaid}}/page/{{_id}}" class="css-page-choises {{readyORnot}}">
+			<a href="/cyoas/{{cyoaid}}/page/{{_id}}" class="css-page-choises 
+{{readyORnot}}">
 			{{#each parent body_id}}
-		<!-- 		<span class="js-page-choises css-page-choises {{readyORnot}}">{{title}}</span> -->
+		<!-- 		<span class="js-page-choises css-page-choises 
+{{readyORnot}}">{{title}}</span> -->
 	<!-- 			{{body_id}} -->
 				<a href="#" class="css-body-choice" style="z-index:5;">
-					{{> editableText context=.. collection='pages' field=(get_choise_value this.index)}}
+					{{> editableText context=.. collection='pages' 
+field=(get_choise_value this.index)}}
 				</a>
 <!-- 			{{title}} -->
 	<!-- 		 -->
@@ -22,7 +25,8 @@
 <template name="removeChoice">
 <!-- 	{{#let body_id=bodyid}} -->
 		{{#if currentUser}}
-			<button class="glyphicon glyphicon-minus js-remove-choice css-remove-choice">
+			<button class="glyphicon glyphicon-minus js-remove-choice 
+css-remove-choice">
 			</button>
 		{{/if}}
 <!-- 		 data-body-id="{{bodyid}}" -->
@@ -31,7 +35,8 @@
 <template name="addPage">
 	{{#let body_id=bodyid}}
 		{{#if currentUser}}
-			<button class="glyphicon glyphicon-plus js-show-page-form" data-body-id="{{body_id}}" aria-hidden="true" title="Add Page">
+			<button class="glyphicon glyphicon-plus js-show-page-form" 
+data-body-id="{{body_id}}" aria-hidden="true" title="Add Page">
 			</button>
 		{{/if}}
 <!-- 		<a href="#" class="js-add-page"> -->
@@ -46,26 +51,40 @@
 					<div class="form-group">
 						{{#basicFormBlock schema=schema action=action}}
 							<p> {{> basicInput field="title"}} </p>
-<!-- 							<p> {{> basicInput field="cyoaid" value=cyoa_id}} </p> -->
-<!-- 							<p> {{> basicInput field="parentid" value=parent_id}} </p> -->
+<!-- 							<p> {{> basicInput field="cyoaid" 
+value=cyoa_id}} </p> -->
+<!-- 							<p> {{> basicInput field="parentid" 
+value=parent_id}} </p> -->
 <!-- 							<div class="form-group"> -->
-<!-- 								<button type="submit" id="submit_doc" class="btn btn-primary" disabled="{{disableButtons}}">Submit</button> -->
-<!-- 									<button type="submit" id="submit_cyoa" class="btn btn-primary" disabled="{{disableButtons}}">Create a CYOA</button> -->
+<!-- 								<button type="submit" id="submit_doc" 
+class="btn btn-primary" disabled="{{disableButtons}}">Submit</button> -->
+<!-- 									<button type="submit" 
+id="submit_cyoa" class="btn btn-primary" disabled="{{disableButtons}}">Create a 
+CYOA</button> -->
 <!-- 							</div> -->
 								<div class="form-group">
-									<button type="submit" class="btn btn-primary js-btn" disabled="{{disableButtons}}">Submit</button>
-									<button type="button" class="btn btn-primary js-btn-select-existing-page" disabled="{{disableButtons}}">Select an existing page</button>
+									<button type="submit" class="btn 
+btn-primary js-btn" disabled="{{disableButtons}}">Submit</button>
+									<button type="button" class="btn 
+btn-primary js-btn-select-existing-page" disabled="{{disableButtons}}">Select 
+an existing page</button>
 								</div>
 						{{/basicFormBlock}}
 					
 				<!--	
-							{{#autoForm id="insertPageForm" collection="Pages"  meteormethod="addPage" type="method"}}
+							{{#autoForm id="insertPageForm" 
+collection="Pages"  meteormethod="addPage" type="method"}}
 								{{> afQuickField name="title"}}
-								{{> afQuickField name="cyoaid" value=cyoa_id}}
-								{{> afQuickField name="parent.$.parentid" value=parent_id}}-->
+								{{> afQuickField name="cyoaid" 
+value=cyoa_id}}
+								{{> afQuickField name="parent.$.parentid" 
+value=parent_id}}-->
 					<!--			<div class="form-group">
-									<button type="submit" class="btn btn-primary js-btn" disabled="{{disableButtons}}">Submit</button>
-									<button type="button" class="btn btn-primary js-btn-select-existing-page" disabled="{{disableButtons}}">Select an existing page</button>
+									<button type="submit" class="btn 
+btn-primary js-btn" disabled="{{disableButtons}}">Submit</button>
+									<button type="button" class="btn 
+btn-primary js-btn-select-existing-page" disabled="{{disableButtons}}">Select 
+an existing page</button>
 								</div>-->
 <!-- 							{{/autoForm}} -->
 					</div>
@@ -76,7 +95,7 @@
 </template>
 <template name="conditionList">
 <!-- 		{{bodyid}} -->
-    {{#let body_id=this._id}}<br>
+	{{#let body_id=this._id}}<br>
 <!-- 		{{bodyid}} -->
 <!-- 		{{body_id}} -->
 		{{#if currentUser}}
@@ -84,33 +103,59 @@
 			</button>
 		{{/if}}
 		{{#each condition}}
-	<!-- 		<span class="js-page-choises css-page-choises {{readyORnot}}">{{title}}</span> -->
+	<!-- 		<span class="js-page-choises css-page-choises 
+{{readyORnot}}">{{title}}</span> -->
 <!-- 			{{body_id}} -->
 <!-- {{this}} -->
 			<br />
-<!-- 			<a href="#" class="js-condition-paramIndex">{{paramIndex}}</a> -->
-<!--			<a href="#" class="js-condition-operation">{{operation}}</a> -->
-<!-- 			<a href="#" class="js-condition-operator">{{operator}}</a> -->
-			<select class="js-condition-operation" data-body-id="{{body_id}}" data-condition-index="{{@index}}">
+<!-- 			<a href="#" 
+class="js-condition-paramIndex">{{paramIndex}}</a> -->
+<!--			<a href="#" class="js-condition-operation">{{operation}}</a> 
+-->
+<!-- 			<a href="#" class="js-condition-operator">{{operator}}</a> 
+-->
+			<select class="js-condition-operation" 
+data-body-id="{{body_id}}" data-condition-index="{{@index}}">
 				{{#if isFirst @index}}
-					<option value="None" {{select optionValue=operation option="None"}}>-</option>
+					<option value="None" {{select optionValue=operation 
+option="None"}}>-</option>
 				{{else}}
-					<option value="AND" {{select optionValue=operation option="AND"}}>AND</option>
-					<option value="OR" {{select optionValue=operation option="OR"}}>OR</option>
+					<option value="AND" {{select optionValue=operation 
+option="AND"}}>AND</option>
+					<option value="OR" {{select optionValue=operation 
+option="OR"}}>OR</option>
 				{{/if}}
 			</select>
-			<a href="#" class="js-condition-param" data-condition-index="{{@index}}" data-bodyid="{{body_id}}">{{paramName}}</a>
-			<select class="js-condition-operator" data-body-id="{{body_id}}" data-condition-index="{{@index}}">
-				<option value="equal" {{select optionValue=operator option="equal"}}>equal</option>
-				<option value="unequal" {{select optionValue=operator option="unequal"}}>unequal</option>
-				<option value="larger" {{select optionValue=operator option="larger"}}>larger</option>
-				<option value="smaller" {{select optionValue=operator option="smaller"}}>smaller</option>
+			<a href="#" class="js-condition-param" 
+data-condition-index="{{@index}}" data-bodyid="{{body_id}}">{{paramName}}</a>
+			<select class="js-condition-operator" data-body-id="{{body_id}}" 
+data-condition-index="{{@index}}">
+				<option value="equal" {{select optionValue=operator 
+option="equal"}}>equal</option>
+				<option value="unequal" {{select optionValue=operator 
+option="unequal"}}>unequal</option>
+				{{#if this.numORnot}}
+					<option value="larger" {{select optionValue=operator 
+option="larger"}}>larger</option>
+					<option value="smaller" {{select optionValue=operator 
+option="smaller"}}>smaller</option>
+				{{/if}}
 			</select>
-			<span>{{paramValue}}</span>,
+			{{#if this.numORnot}}
+<!-- 			{{paramValueIndex}} -->
+				{{#let value_index=@index}}
+					{{> editableText context=../.. 
+collection='pagesBodies' field=(conditions value_index paramValueIndex)}}
+				{{/let}}
+			{{else}}
+				<span>{{paramValue}}</span>,
+			{{/if}}
 			{{#if currentUser}}
-				<button class="glyphicon glyphicon-minus js-remove-condition" data-body-id="{{body_id}}" data-condition-index="{{@index}}">
+				<button class="glyphicon glyphicon-minus 
+js-remove-condition" data-body-id="{{body_id}}" 
+data-condition-index="{{@index}}">
 				</button>
 			{{/if}}
 		{{/each}}
-    {{/let}}
+	{{/let}}
 </template>
