--- a/client/cyoaStuff/item.html
+++ b/client/cyoaStuff/item.html
@@ -14,7 +14,7 @@
 		</div>
 	{{/with}}
 </template>
-
+<!-- html -> epub JS lib: https://github.com/cyrilis/epub-gen -->
 <template name="constantPages">
 <!-- 	<script src="http://t4t5.github.io/sweetalert/dist/sweetalert.min.js"></script> -->
 <!-- 	<link href="http://t4t5.github.io/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css"/> -->
